<resources>
    <string name="app_name">android-final</string>
    <string name="action_settings">Settings</string>
    <string name="dog_types">Dog Types</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="userNameInput">User Name</string>
    <string name="emailInput">Email</string>
    <string name="PasswordInput">Password</string>
    <string name="RePassword">Re-Password</string>
    <string name="cancel">Cancel</string>
    <string name="petAge">Pet Age: </string>
    <string name="petName">Pet Name: </string>
    <string name="spinner_title">Gender</string>
    <string name="option_1">Male</string>
    <string name="option_2">Female</string>
    <string name="save">Save</string>

    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>

    </string-array>

    <string name="hello_first_fragment">AndroidFinal</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_media">profileImg</string>
    <string name="profileTitle">User Name: </string>
    <string name="profilePetAge">Pet Age: </string>
    <string name="edit_profile">Edit Profile</string>
    <string name="see_your_posts">See Your Posts</string>
    <string name="avatarImg">Pet Image</string>
    <string name="imgbtn">Image button</string>
    <string name="post_context">Post Context</string>
    <string name="logOut">Log Out</string>

    <string name="edit_post_avatarImg">Log Out</string>

    <string name="sign_id">Sign In</string>
    <string name="animalName">Animal Name</string>
    <string name="playfulness">playfulness</string>
    <string name="goodWithKids">Good With Kids</string>

</resources>